fix: typo and stack

--- a/resume.tex
+++ b/resume.tex
@@ -32,7 +32,7 @@
 
 \cventry{June 2017 --- Present}{Software Engineer}{Sciensa}{São Paulo, SP, Brazil}{}{
  Working as backend developer and implementing DevOps solutions using microservices architecture.\newline
- \textbf{Stack}: NodeJS/ES2k15+, Docker, AWS, Rancher, shellScript, Kubernetes, Linkerd, ELK, TDD/BDD.\newline
+ \textbf{Stack}: NodeJS/ES2k15+, Docker, AWS, Rancher, RabbitMQ, Grafana, shellScript, Kubernetes, Linkerd, ELK, TDD/BDD.\newline
 }
 
 \cventry{August 2016 --- June 2017}{Software Engineer}{Lab21k}{Rio de Janeiro, RJ, Brazil}{}{
@@ -75,7 +75,7 @@
 \textbf{Markup Languages} - HTML5, CSS3, Markdown, LaTeX \newline
 \textbf{Task Runners/Module Bundler} - Webpack, Gulp, Grunt, Leiningen (Basic)\newline
 \textbf{Databases/Mem. Storage's} - Postgres/PostGIS, MongoDB, Sqlite, ElasticSearch, Redis \newline
-\textbf{DevOps/General Tooling} - Logstash/Filebeat, Graphana, Docker, Rancher, Kong, Linkerd, Kubernetes (basic), Chef \newline
+\textbf{DevOps/General Tooling} - Logstash/Filebeat, Grafana, Docker, Rancher, Kong, Linkerd, Kubernetes (basic), Chef \newline
 }
 \cvitem{Frameworks and Libraries}{
 \textbf{Web} - Express, AngularJS, THREE.js/WebGL, React/Reagent (basic), SocketIO, Cowboy, Flask, Django  \newline
